# libtoypp

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/toypp/: curry.hpp  flatmap.hpp  functional.hpp  optional.hpp  queue.hpp  range.hpp  span.hpp  tmputils.hpp  uniqueptr.hpp  vector.hpp
include/toypp/threaded/: doublebuffer.hpp  queue.hpp  semaphore.hpp  spinmutex.hpp  spinsemaphore.hpp  spsc_ringbuffer.hpp  threadpool.hpp
tests/: CMakeLists.txt  queue.cpp  span.cpp  threaded_doublebuffer.cpp  threaded_queue.cpp  threaded_spsc_ringbuffer.cpp  uniqueptr.cpp
toypp/: array.hpp  dynamic_square_matrix.hpp  math.hpp  matrix.hpp  range.hpp  uniqueptr.hpp  vector.hpp
